tests/golden/err-comma-vec/expected_error.txt
error: 式の行末で予期しないトークンです
 --> main.clum:1:7
  |
1 | xs = 1, 2, 3
  |       ^
